# vscode-based-C_CPP-workspace-template

./: LICENSE  README.md
clang_clang++/: .gitignore
cmake_clang_chang++/: .gitignore  CMakeLists.txt  swap.cpp
cmake_py_gcc_gpp/: .gitignore  build.py
cmake_py_gcc_gpp/src/: main.cpp
cmake_py_gcc_gpp/src/include1/: include1.h
cmake_with_clang_chang++/: .gitignore  clean_workspace_exe.bat  main.cpp  start.cpp  test.cpp
cmake_with_clang_chang++/include/: swap.h
cmakepygccgpp/: .gitignore  CMakeLists.txt
cmakepygccgpp/src/: main.cpp
cmakepygccgpp/src/include1/: include1.cpp
cmakepygccgpp/src/include2/: include2.cpp  include2.h
doc/: README-clang-cmake.md  README-clang.md  README-cmake-py-gcc.md  README-gcc.md  README-global.md
doc/other-article/: Configure_Myself.md  New Text Document.txt  README-original.md  README2.md  csdn_zhou-haha.md  debug_tricks.md  zhihu_tanjiuding.md
global/: settings.json
